==> belfry2023/elec-cdemo/Modules/oled/OLED.c <==
#include "OLED.h"

void OLED_W_SCL(uint8_t BitValue)
{
    /*根据BitValue的值，将SCL置高电平或者低电平*/
    HAL_GPIO_WritePin(OLED_SCL_GPIO_Port, OLED_SCL, (GPIO_PinState)BitValue);
    /*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
    for (volatile uint16_t i = 0; i < Delay_time; i++) {
        //for (uint16_t j = 0; j < 10; j++);
    }
}

void OLED_W_SDA(uint8_t BitValue)
{
    /*根据BitValue的值，将SDA置高电平或者低电平*/
    HAL_GPIO_WritePin(OLED_SDA_GPIO_Port, OLED_SDA, (GPIO_PinState)BitValue);
    /*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
    for (volatile uint16_t i = 0; i < Delay_time; i++) {
        //for (uint16_t j = 0; j < 10; j++);
    }
}

void OLED_GPIO_Init(void)
{
    uint32_t i, j;

    /* 在初始化前，加入适量延时，待OLED供电稳定 */
    for (i = 0; i < 1000; i++) {
        for (j = 0; j < 1000; j++)
            ;
    }
#ifdef OLED_USE_SW_I2C
    __HAL_RCC_GPIOC_CLK_ENABLE();                       /* 使能GPIOC时钟 */
    __HAL_RCC_GPIOA_CLK_ENABLE();                       /* 使能GPIOA时钟 */
    GPIO_InitTypeDef GPIO_InitStruct = {0};             /* 定义结构体配置GPIO */
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;	        /* 设置GPIO模式为开漏输出模式 */
    GPIO_InitStruct.Pull = GPIO_PULLUP;                 /* 内部上拉电阻 */
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;       /* 设置GPIO速度为高速 */
    GPIO_InitStruct.Pin = I2C_SDA_Pin;                  /* 设置引脚 */
    HAL_GPIO_Init(I2C3_SDA_GPIO_Port, &GPIO_InitStruct);/* 初始化GPIO */

    GPIO_InitStruct.Pin = I2C_SCL_Pin;
    HAL_GPIO_Init(I2C3_SCL_GPIO_Port, &GPIO_InitStruct);

    /*释放SCL和SDA*/
    OLED_W_SCL(1);
    OLED_W_SDA(1);
#endif
}
